# csv-redcap

./: .gitignore  README.md  STARTHERE.md  main.py  pyproject.toml
data/: test_template.yaml
data/output/: redcap_export.csv
docs/: ARCHITECTURE.md
notebooks/: 01_datadict_exploration.ipynb  02_datadict_parsing.ipynb  03_template_test.ipynb  04_transform_testing.ipynb
src/: __init__.py  datadict.py  main.py  redcap_project.py  template.py  transform.py  utils.py
templates/: example_template.yaml
ui/: components.py  template_builder.py
