[project]
name = "csv-redcap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "simpleeval>=1.0.3",
]

[dependency-groups]
dev = [
    "flet[all]>=0.80.1",
]
